--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @sections.each do |section| %>
       <tr>
-        <td><%= section.workshop %></td>
+        <td><%= section.workshop.title %></td>
         <td><%= link_to 'Show', section %></td>
         <td><%= link_to 'Edit', edit_section_path(section) %></td>
         <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
